# homograph-bel

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  DATA_LICENSE.md  Makefile  NOTICE.md  README.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
configs/dictionary/: grammar-db-v2.toml
docs/: data-provenance.md  llm-contract.md  python-api.md  releasing.md
scripts/: benchmark_dictionary_scan.py
src/homograph_bel/: __init__.py  cli.py
src/homograph_bel/datasets/: __init__.py  contracts.py
src/homograph_bel/dictionary/: __init__.py  grammar_db.py  index.py  morphology.py  output.py  review.py  statistics.py  v2.py
src/homograph_bel/inference/: __init__.py  benchmark.py  dictionary.py
src/homograph_bel/resources/: __init__.py
tests/integration/: test_dictionary_benchmark.py  test_dictionary_cli.py
tests/unit/: test_package.py  test_resources.py
tests/unit/dictionary/: test_dictionary_output.py  test_dictionary_review.py  test_dictionary_v2.py  test_grammar_db.py  test_index.py  test_morphology.py  test_source_contract.py
tests/unit/inference/: test_dictionary.py
